[BE] k8s matching-listener, job-fetcher and rabbitmq UAT and Prod fix  (#154)
* uat yaml for job fetcher, matching listener and rabbitmq

* prod fix

--- a/k8s/prod/rabbitmq3.yaml
+++ b/k8s/prod/rabbitmq3.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: rabbitmq3
           image: rabbitmq:3-management
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - name: additional-port
               containerPort: 5672
