Add SERP job fetch flag

--- a/k8s/prod/config/config.yaml.example
+++ b/k8s/prod/config/config.yaml.example
@@ -30,3 +30,4 @@ data:
   MATCHING_DATASOURCE_URL: TBD
   MATCHING_DATASOURCE_USERNAME: prod_root_name
   MATCHING_DATASOURCE_PASSWORD: pw_tbd
+  MOCK_JOB_FETCH: set_during_deployment
