[BE][183] Flexible Cron Job Schedules using env variable (#177)
* init

* yaml example

--- a/k8s/prod/config/config.yaml.example
+++ b/k8s/prod/config/config.yaml.example
@@ -31,3 +31,4 @@ data:
   MATCHING_DATASOURCE_USERNAME: prod_root_name
   MATCHING_DATASOURCE_PASSWORD: pw_tbd
   MOCK_JOB_FETCH: set_during_deployment
+  JOB_FETCH_EVERY_SECS: 864000
