--- a/k8s/prod/app-spa.yaml
+++ b/k8s/prod/app-spa.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: app-spa-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: app-svc
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: app-spa
           image: kuaidaoresume/app-spa
+          imagePullPolicy: Always
           ports:
             - name: http-port
               containerPort: 80
