feat - add in logout (#186)
* feat - add in logout

* try retrigger the build

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/webapp/src/shell/configs/configs-base.json
+++ b/webapp/src/shell/configs/configs-base.json
@@ -1,6 +1,8 @@
 {
   "login-url": "http://www.kuaidaoresume-v2.local/login",
 
+  "logout-url": "http://www.kuaidaoresume-v2.local/logout",
+
   "services-account-baseUrl": "account.kuaidaoresume-v2.local",
 
   "services-resume-baseUrl": "resume.kuaidaoresume-v2.local",
