--- a/webapp/src/shell/configs/configs-prod.json
+++ b/webapp/src/shell/configs/configs-prod.json
@@ -1,6 +1,8 @@
 {
   "login-url": "http://www.smartresume.careers/login",
 
+  "logout-url": "http://www.smartresume.careers/logout",
+
   "services-account-baseUrl": "account.smartresume.careers",
 
   "services-resume-baseUrl": "resume.smartresume.careers",
