--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
     "jest-canvas-mock": "^2.2.0",
     "jspdf": "2.1.1",
     "moment": "^2.27.0",
+    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-avatar-edit": "^0.8.3",
