TF-75 [App-岗位匹配][前后集成] 岗位匹配和后端matching svc 集成 (#157)
* feat - update jobs to use matching services

* feat - add in totals

* fix build

* update tests

* feat - remove the entrance to jobs

* test - update snapshots

* code review changes

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/webapp/src/shell/configs/configs-base.json
+++ b/webapp/src/shell/configs/configs-base.json
@@ -7,6 +7,8 @@
 
   "services-resume-baseUrl": "resume.kuaidaoresume-v2.local",
 
+  "services-matching-baseUrl": "matching.kuaidaoresume-v2.local",
+
   "services-job-baseUrl": "job.kuaidaoresume-v2.local",
 
   "services-kdr-baseUrl": "kdr.kuaidaoresume-v2.local",
