TF-00000 fix - ui fixes (#191)
* fix - fix smart resume left nav

* feat - fix some text color

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/webapp/src/shell/configs/configs-prod.json
+++ b/webapp/src/shell/configs/configs-prod.json
@@ -7,6 +7,8 @@
 
   "services-resume-baseUrl": "resume.smartresume.careers",
 
+  "services-matching-baseUrl": "matching.smartresume.careers",
+
   "services-job-baseUrl": "job.smartresume.careers",
 
   "services-kdr-baseUrl": "kdr.smartresume.careers",
