--- a/webapp/src/shell/configs/configs-uat.json
+++ b/webapp/src/shell/configs/configs-uat.json
@@ -7,6 +7,8 @@
 
   "services-resume-baseUrl": "resume.uat.smartresume.careers",
 
+  "services-matching-baseUrl": "matching.uat.smartresume.careers",
+
   "services-job-baseUrl": "job.uat.smartresume.careers",
 
   "services-kdr-baseUrl": "kdr.uat.smartresume.careers",
