--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-intersection-observer": "^8.26.2",
+    "react-pdf": "^5.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0"
