--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -5,6 +5,10 @@ WORKDIR '/usr/app'
 ARG REACT_APP_ENV
 ENV REACT_APP_ENV $REACT_APP_ENV
 
+ENV AWS_ACCESS_KEY_ID AKIA3JBYJ73S4MS7BHPP
+ENV AWS_SECRET_ACCESS_KEY 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
+ENV GOOGLE_APPLICATION_CREDENTIALS '/usr/app/server/secrets/tailorurcv-goolge-talent-api-2a7446cacb54.json'
+
 RUN echo "Running on $REACT_APP_ENV"
 
 # install dependencies
