[BE][TAIL-204] resume service caching (#195)
* [BE][TAIL-204] resume service caching

* make maximum cache size configurable

* move caching config to application.yml

--- a/k8s/prod/config/config.yaml.example
+++ b/k8s/prod/config/config.yaml.example
@@ -32,3 +32,4 @@ data:
   MATCHING_DATASOURCE_PASSWORD: pw_tbd
   MOCK_JOB_FETCH: set_during_deployment
   JOB_FETCH_EVERY_SECS: 864000
+  RESUME_CACHING_MAXIMUM_SIZE: 50000
