[BE][TAIL-181] matching service level caching (#161)
* [BE][TAIL-181] matching service level caching

* address CR comments

* make maximum cache size configurable

--- a/k8s/prod/config/config.yaml.example
+++ b/k8s/prod/config/config.yaml.example
@@ -33,3 +33,4 @@ data:
   MOCK_JOB_FETCH: set_during_deployment
   JOB_FETCH_EVERY_SECS: 864000
   RESUME_CACHING_MAXIMUM_SIZE: 50000
+  MATCHING_CACHING_MAXIMUM_SIZE: 100000
