--- a/matching-svc/pom.xml
+++ b/matching-svc/pom.xml
@@ -29,6 +29,14 @@
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.intercom</groupId>
             <artifactId>intercom-java</artifactId>
             <version>2.8.0</version>
