--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@google-cloud/translate": "^6.0.2",
     "@reduxjs/toolkit": "^1.1.0",
-    "aws-sdk": "^2.747.0",
+    "aws-sdk": "^2.760.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
@@ -22,6 +22,7 @@
     "jspdf": "2.1.1",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-avatar-edit": "^0.8.3",
