--- a/k8s/prod/config/config.yaml.example
+++ b/k8s/prod/config/config.yaml.example
@@ -32,3 +32,5 @@ data:
   MATCHING_DATASOURCE_PASSWORD: pw_tbd
   MOCK_JOB_FETCH: set_during_deployment
   JOB_FETCH_EVERY_SECS: 864000
+  RESUME_CACHING_MAXIMUM_SIZE: 50000
+  MATCHING_CACHING_MAXIMUM_SIZE: 100000
