--- a/common-lib/pom.xml
+++ b/common-lib/pom.xml
@@ -77,5 +77,11 @@
             <artifactId>ahocorasick</artifactId>
             <version>0.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.pemistahl</groupId>
+            <artifactId>lingua</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 </project>
