--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,14 @@
 				<version>1.0.0</version>
 			</dependency>
 
+			<!-- Static code scan -->
+			<dependency>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs</artifactId>
+				<version>4.1.2</version>
+				<type>pom</type>
+			</dependency>
+
 			<!-- Test -->
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
@@ -233,6 +241,33 @@
 					<compilerArgs>
 						<arg>-parameters</arg>
 					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>4.0.4</version>
+				<configuration>
+					<effort>Max</effort>
+					<threshold>Low</threshold>
+					<failOnError>true</failOnError>
+					<includeFilterFile>src/test/resources/spotbugs-security-include.xml</includeFilterFile>
+					<excludeFilterFile>src/test/resources/spotbugs-security-exclude.xml</excludeFilterFile>
+					<plugins>
+						<plugin>
+							<groupId>com.h3xstream.findsecbugs</groupId>
+							<artifactId>findsecbugs-plugin</artifactId>
+							<version>1.10.1</version>
+							<executions>
+								<execution>
+									<phase>package</phase>
+									<goals>
+										<goal>check</goal>
+									</goals>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
 				</configuration>
 			</plugin>
 		</plugins>
