--- a/k8s/uat/config/config.yaml.example
+++ b/k8s/uat/config/config.yaml.example
@@ -28,3 +28,7 @@ data:
   JOB_DATASOURCE_USERNAME: <Ask Aaron>
   JOB_DATASOURCE_PASSWORD: <check wechat msg>
   MOCK_JOB_FETCH: set_during_deployment
+  JOB_CACHE_POLICY_MAXSIZE: PER_NODE
+  JOB_CACHE_POLICY_EVICTION: LRU
+  JOB_SEARCH_CACHE_POLICY_MAXSIZE: PER_NODE
+  JOB_SEARCH_CACHE_POLICY_EVICTION: LFU
