--- a/k8s/prod/config/config.yaml.example
+++ b/k8s/prod/config/config.yaml.example
@@ -34,3 +34,7 @@ data:
   JOB_FETCH_EVERY_SECS: 864000
   RESUME_CACHING_MAXIMUM_SIZE: 50000
   MATCHING_CACHING_MAXIMUM_SIZE: 100000
+  JOB_CACHE_POLICY_MAXSIZE: PER_NODE
+  JOB_CACHE_POLICY_EVICTION: LRU
+  JOB_SEARCH_CACHE_POLICY_MAXSIZE: PER_NODE
+  JOB_SEARCH_CACHE_POLICY_EVICTION: LFU
