--- a/webapp/src/shell/configs/configs-uat.json
+++ b/webapp/src/shell/configs/configs-uat.json
@@ -17,5 +17,7 @@
 
   "services-auth-baseUrl": "whoami.uat.smartresume.careers",
 
-  "services-app-baseUrl": "app.uat.smartresume.careers"
+  "services-app-baseUrl": "app.uat.smartresume.careers",
+  
+  "services-matching-baseUrl": "matching.uat.smartresume.careers"
 }
