加入邮件模板： 账户激活 + 重置密码 (#149)
* Stub doesn't work on nested components for workflow testsing.

* workaround to mock FeignClient

* add 2 email tempaltes skeleton

* Integration with CN email template for Oscar's template work.

* use html template

* update template and include logo

* address cr comments

Co-authored-by: sliu <sliu@shuangsuangsmbp.lan>
Co-authored-by: Spencer Li <bambamkuka@gmail.com>
Co-authored-by: tengr <tengrc1106@gmail.com>

--- a/account-svc/src/test/resources/application-it.yml
+++ b/account-svc/src/test/resources/application-it.yml
@@ -1,5 +1,7 @@
 # ****** H2 In Memory Database Connection Info *******
 spring:
+  profiles:
+    it
   application:
     name: account-service
   datasource: # use in-memory db for unit testing
