--- a/k8s/prod/kdr-svc.yaml
+++ b/k8s/prod/kdr-svc.yaml
@@ -43,6 +43,11 @@ spec:
     env: prod
   ports:
     - protocol: TCP
+      name: http
       port: 80
+      targetPort: 80
+    - protocol: TCP
+      name: https
+      port: 443
       targetPort: 80
   type: LoadBalancer
