对岗精修页面 前后集成 (#183)
* update job refinement secton, connect to backend

* fix bug, link resume

* code cleanup + update some servicecs call

* hook with resume data

* refinement should be working, more refactor is needed

* code refactor, still need some css update

* update based on review

* some css fix

* code update with pair with Woody

* code review update

* lots of update based on woody's comments

* Update zh.json

remove no needed strings

* update based on review

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

--- a/webapp/src/shell/configs/configs-base.json
+++ b/webapp/src/shell/configs/configs-base.json
@@ -10,6 +10,8 @@
   "services-matching-baseUrl": "matching.kuaidaoresume-v2.local",
 
   "services-job-baseUrl": "job.kuaidaoresume-v2.local",
+  
+  "services-matching-baseUrl": "matching.kuaidaoresume-v2.local",
 
   "services-kdr-baseUrl": "kdr.kuaidaoresume-v2.local",
 
