[BE][TF169,170] Job Fetcher Refactor
* Top 100 Chinese city as query
* Refactor consumer & producer avoid fast producer vs slow consumer
* Smarter paging navigation to reduce query

--- a/job-fetcher/config.json
+++ b/job-fetcher/config.json
@@ -11,7 +11,7 @@
 
     "cronjob": {
         "afterClearJobs": 20,
-        "scheduleInSecs": 75
+        "scheduleInSecs": 864000
     },
 
     "serpParams": {
@@ -29,8 +29,8 @@
 
     "serpQueries":     {
         "en": {
-                "levels": [
-                "junior", "entry level", "student", "internship", "new graduate"
+            "levels": [
+            "junior", "entry level", "student", "internship", "new graduate"
             ],   
             "industries": [
                 "accounting", "Actuarial science", "computer scienece", "software engineering", "chemical engineering", "civil engineering", "computer engineering", "data science", "economics", "electricial engineering",
@@ -43,16 +43,107 @@
             ]
         },
         "zh": {
-            "levels": [
-                "应届生", "实习"
-            ],   
-            "industries": [
-                "会计","精算科学","计算机科学","软件工程","化学工程","土木工程","计算机工程","数据科学","经济学","电气工程",
-                "环境工程","金融","地质","平面设计","人力资源","工业工程","管理信息系统","营销","机械工程","采矿工程",
-                "营养","石油工程","物理","材料工程","社会学","生物学","统计学","生物信息学","数学","供应链"
-            ],
-            "countries": [
-                "北京", "上海", "杭州"         
+            "cities": [
+                "北京",
+                "上海",
+                "广州",
+                "深圳",
+                "天津",
+                "成都",
+                "杭州",
+                "苏州",
+                "重庆",
+                "武汉",
+                "南京",
+                "大连",
+                "沈阳",
+                "长沙",
+                "郑州",
+                "西安",
+                "青岛",
+                "无锡",
+                "济南",
+                "宁波",
+                "佛山",
+                "南通",
+                "哈尔滨",
+                "东莞",
+                "福州",
+                "长春",
+                "石家庄",
+                "烟台",
+                "合肥",
+                "唐山",
+                "常州",
+                "太原",
+                "昆明",
+                "潍坊",
+                "南昌",
+                "泉州",
+                "温州",
+                "绍兴",
+                "嘉兴",
+                "厦门",
+                "贵阳",
+                "淄博",
+                "徐州",
+                "南宁",
+                "扬州",
+                "呼和浩特",
+                "鄂尔多斯",
+                "乌鲁木齐",
+                "金华",
+                "台州",
+                "镇江",
+                "威海",
+                "珠海",
+                "东营",
+                "大庆",
+                "中山",
+                "盐城",
+                "包头",
+                "保定",
+                "济宁",
+                "泰州",
+                "廊坊",
+                "兰州",
+                "洛阳",
+                "宜昌",
+                "沧州",
+                "临沂",
+                "泰安",
+                "鞍山",
+                "邯郸",
+                "惠州",
+                "江门",
+                "襄阳",
+                "湖州",
+                "吉林",
+                "芜湖",
+                "德州",
+                "聊城",
+                "漳州",
+                "株洲",
+                "淮安",
+                "榆林",
+                "常德",
+                "咸阳",
+                "衡阳",
+                "滨州",
+                "柳州",
+                "遵义",
+                "菏泽",
+                "南阳",
+                "新乡",
+                "湛江",
+                "岳阳",
+                "郴州",
+                "许昌",
+                "连云港",
+                "枣庄",
+                "茂名",
+                "周口",
+                "宿迁"
             ]
         }
     }
