--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,8 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "html2canvas": "^1.0.0-rc.7",
