--- a/matching-svc/pom.xml
+++ b/matching-svc/pom.xml
@@ -61,6 +61,12 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.huaban</groupId>
+            <artifactId>jieba-analysis</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
