Adjust the way of how we passing file to resumeSDK (#295)
* Adjust the way of how we passing file to resumeSDK

* fix the bug on resume SDK

* fix photo upload issue

* fix photo upload issue

* code update based on review

* update a prop check to pass test

* update config yaml file

* update snapshot

* updaet dockerfile

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>
Co-authored-by: tengr <tengrc1106@gmail.com>

--- a/k8s/uat/config/config.yaml.example
+++ b/k8s/uat/config/config.yaml.example
@@ -33,3 +33,5 @@ data:
   JOB_CACHE_POLICY_EVICTION: LRU
   JOB_SEARCH_CACHE_POLICY_MAXSIZE: PER_NODE
   JOB_SEARCH_CACHE_POLICY_EVICTION: LFU
+  RESUMESDK_UID=<123456>
+  RESUMESDK_PWD=<very_secure_password>
