--- a/webapp/package.json
+++ b/webapp/package.json
@@ -57,6 +57,7 @@
     "build": "react-scripts build",
     "build:ci": "CI=true react-scripts build",
     "test": "REACT_APP_ENV=test react-scripts test",
+    "tw": "cross-env REACT_APP_ENV=test react-scripts test",
     "test:nowatch": "REACT_APP_ENV=test CI=true react-scripts test",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject"
