--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@google-cloud/translate": "^6.0.2",
     "@reduxjs/toolkit": "^1.1.0",
+    "@sentry/browser": "^5.27.6",
+    "@sentry/tracing": "^5.27.6",
     "aws-sdk": "^2.760.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
