--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@google-cloud/translate": "^6.0.2",
     "@reduxjs/toolkit": "^1.1.0",
+    "antd": "^4.8.6",
     "@sentry/browser": "^5.27.6",
     "@sentry/tracing": "^5.27.6",
     "aws-sdk": "^2.760.0",
