--- a/webapp/package.json
+++ b/webapp/package.json
@@ -61,7 +61,7 @@
     "build:ci": "CI=true react-scripts build",
     "test": "REACT_APP_ENV=test react-scripts test",
     "tw": "cross-env REACT_APP_ENV=test react-scripts test",
-    "test:nowatch": "REACT_APP_ENV=test CI=true react-scripts test",
+    "test:nowatch": "REACT_APP_ENV=test CI=true react-scripts test -u",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject"
   },
