--- a/account-svc/src/test/resources/application-it.yml
+++ b/account-svc/src/test/resources/application-it.yml
@@ -11,13 +11,12 @@ spring:
     driver-class-name: org.h2.Driver
     continue-on-error: false
     platform: h2
-    schema: classpath:/db/schema.sql
   h2:
     console:
       enabled: true
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
@@ -25,6 +24,8 @@ spring:
   output:
     ansi:
       enabled: always
+  flyway:
+    enabled: false
 
 kuaidaoresume:
   common:
