[BE] prod env setups

--- a/job-fetcher/config.json
+++ b/job-fetcher/config.json
@@ -33,7 +33,7 @@
             "junior", "entry level", "student", "internship", "new graduate"
             ],   
             "industries": [
-                "accounting", "Actuarial science", "computer scienece", "software engineering", "chemical engineering", "civil engineering", "computer engineering", "data science", "economics", "electricial engineering",
+                "accounting", "Actuarial science", "computer science", "software engineering", "chemical engineering", "civil engineering", "computer engineering", "data science", "economics", "electrical engineering",
                 "Environmental Engineering", "finance", "geology", "graphic design", "human resource", "industrial engineering", "management information system", "marketing", "mechanical engineering", "mining engineering",
                 "Nutrition", "petroleum engineering", "physics", "materials engineering", "Sociology", "biology", "statistics", "Bioinformatics", "mathematics", "supply chain"
             ],
