--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [12.16.3]
 
     steps:
     - uses: actions/checkout@v1
