--- a/account-svc/src/main/resources/application.yml
+++ b/account-svc/src/main/resources/application.yml
@@ -1,13 +1,11 @@
 # application.yml
 spring:
-  profiles:
-    active: dev
   application:
     name: account-service
   datasource:
-    url: ${ACCOUNT_DATASOURCE_URL}
-    username: ${ACCOUNT_DATASOURCE_USERNAME}
-    password: ${ACCOUNT_DATASOURCE_PASSWORD}
+    url: ${ACCOUNT_DATASOURCE_URL:jdbc:mysql://kuaidaoresume-account.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-account?useUnicode=true&characterEncoding=utf-8}
+    username: ${ACCOUNT_DATASOURCE_USERNAME:root}
+    password: ${ACCOUNT_DATASOURCE_PASSWORD:~Youkn0wit)-acc0unt}
     tomcat:
       test-while-idle: true
       validation-query: SELECT 1
