--- a/job-svc/pom.xml
+++ b/job-svc/pom.xml
@@ -88,11 +88,7 @@
             <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
-                <configuration>
-                    <url>jdbc:mysql://kuaidaoresume-job.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-job</url>
-                    <user>root</user>
-                    <password>~Youkn0wit)-j0b</password>
-                </configuration>
+                <version>6.5.6</version>
             </plugin>
         </plugins>
     </build>
