--- a/job-svc/src/main/resources/application.yml
+++ b/job-svc/src/main/resources/application.yml
@@ -1,13 +1,11 @@
 # application.yml
 spring:
-  profiles:
-    active: dev
   application:
     name: job-service
   datasource:
-    url: ${job_DATASOURCE_URL}
-    username: ${job_DATASOURCE_USERNAME}
-    password: ${job_DATASOURCE_PASSWORD}
+    url: ${JOB_DATASOURCE_URL:jdbc:mysql://kuaidaoresume-job.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume_job?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC}
+    username: ${JOB_DATASOURCE_USERNAME:root}
+    password: ${JOB_DATASOURCE_PASSWORD:~Youkn0wit)-j0b}
     tomcat:
       test-while-idle: true
       validation-query: SELECT 1
