--- a/matching-svc/src/main/resources/application-dev.yml
+++ b/matching-svc/src/main/resources/application-dev.yml
@@ -1,9 +1,7 @@
 spring:
-  datasource:
-    url: jdbc:mongo://TBD
-    username: TBD
-    password: TDB
-#logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+  profiles:
+    active: dev
+
 server:
   port: 8087
 kuaidaoresume:
