--- a/resume-svc/src/main/resources/application.yml
+++ b/resume-svc/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://kuaidaoresume-resume.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-resume?useUnicode=true&characterEncoding=utf-8
-    username: root
-    password: ~Youkn0wit)-res0ume
+    url: ${RESUME_DATASOURCE_URL:jdbc:mysql://kuaidaoresume-resume.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-resume?useUnicode=true&characterEncoding=utf-8}
+    username: ${RESUME_DATASOURCE_USERNAME:root}
+    password: ${RESUME_DATASOURCE_PASSWORD:~Youkn0wit)-res0ume}
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
