--- a/account-svc/pom.xml
+++ b/account-svc/pom.xml
@@ -71,11 +71,7 @@
             <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
-                <configuration>
-                    <url>jdbc:mysql://kuaidaoresume-account.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-account</url>
-                    <user>root</user>
-                    <password>~Youkn0wit)-acc0unt</password>
-                </configuration>
+                <version>6.5.6</version>
             </plugin>
         </plugins>
     </build>
