[FE] Finalizing Job Location Standardization (#448)

--- a/job-fetcher/Dockerfile
+++ b/job-fetcher/Dockerfile
@@ -10,6 +10,10 @@ COPY mock_job_results.json .
 
 COPY JobFetcher.py .
 
+COPY LocationClassifier.py .
+
+COPY locationData/ locationData/
+
 RUN pip install -r requirements.txt
 
 ENTRYPOINT ["python", "JobFetcher.py"]
