--- a/onboarding-app/pom.xml
+++ b/onboarding-app/pom.xml
@@ -36,6 +36,11 @@
             <version>3.0.1</version>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+        </dependency>
+        <dependency>
             <groupId>com.kuaidao</groupId>
             <artifactId>common-lib</artifactId>
         </dependency>
